fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,5 @@ body {
     width: 100%;
     height: 100%;
     background-color:rgb(225, 250, 179);
+    border: 6px solid orange;
 }
